--- a/files/html/index.html
+++ b/files/html/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Susel server</title>
   </head>
-  <body style="background-color:indianred;">
+  <body style="background-color:#EE0FE7;">
     <h1>Task №4</h1>
     <h2><a href="https://susel.ddns.net/secondpage">1. Second page</a></h2>
     <h2><a href="https://susel.ddns.net/music/carry_on_wayward_son.mp3"> 2. Download music</a></h2>
