--- a/files/html/index.html
+++ b/files/html/index.html
@@ -6,7 +6,7 @@
   </head>
   <body style="background-color:#EE0F6A;">
     <h1>Task №4</h1>
-    <h2><a href="https://susel.ddns.net/secondpage">1. test</a></h2>
+    <h2><a href="https://susel.ddns.net/secondpage">1. ECS test</a></h2>
     <h2><a href="https://susel.ddns.net/music/carry_on_wayward_son.mp3"> 2. Download music</a></h2>
     <h2><a href="https://susel.ddns.net/info.php">3. Info php</a></h2>
     <h2><a href="https://google.com" target="_blank">4. Google</a></h2>
